# computational-photography

assign1/: CMakeLists.txt  README.md  main.cpp  openexr_utils.cpp  openexr_utils.h  utils.cpp  utils.h
assign2/: assign2.ipynb
assign2/.ipynb_checkpoints/: assign2-checkpoint.ipynb
assign2/images/scene5/: readme.txt
assign3/: CMakeLists.txt  algo  algo.cpp  algo.h  csv.cpp  csv.h  main.cpp
assign3/.ipynb_checkpoints/: assign3-checkpoint.ipynb
assign3/7708.24-29/: imglist
assign3/7708.6-11/: calparam  comparam  imglist
assign3/7710.1-6/: imglist
assign3/submission/: assign3.ipynb
